Add files to repo.

--- a/css/editor-style.css
+++ b/css/editor-style.css
@@ -4,7 +4,7 @@
 /* Styles specific to the editor. */
 
 body.rtl {
-	font-family: 'Lato', 'Helvetica Neue', Helvetica, sans-serif;
+	font-family: 'Open Sans', 'Helvetica Neue', Helvetica, sans-serif;
 }
 
 body#tinymce {
