--- a/style.css
+++ b/style.css
@@ -2,8 +2,8 @@
 Theme Name: Chuchadon
 Theme URI: https://foxland.fi/downloads/chuchadon/
 Author: Sami Keijonen
-Author URI: https://foxland.fi
-Description: Chuchadon is perfect fit for business, personal or blog sites. It has beautiful Front Page template where you can show your important content, testimonials and Callout links. Toivo is an accessible, translation-ready theme which supports plenty of features like Right to Left languages and Schema.org microdata.
+Author URI: https://foxland.fi/
+Description: Chuchadon WordPress theme is made for sport clubs looking to use the SportsPress plugin. It’s also a perfect home for your fitness, health, or happiness blog.
 Version: 1.0.0
 License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
@@ -14,7 +14,7 @@ Tags: white, light, one-column, two-columns, left-sidebar, right-sidebar, fluid-
 This theme, like WordPress, is licensed under the GPL.
 Use it to make something cool, have fun, and share what you've learned with others.
 
-Toivo is based on Underscores http://underscores.me/, (C) 2012-2015 Automattic, Inc.
+Chuchadon is based on Underscores http://underscores.me/, (C) 2012-2015 Automattic, Inc.
 
 Normalizing styles have been helped along thanks to the fine work of
 Nicolas Gallagher and Jonathan Neal http://necolas.github.com/normalize.css/
