--- a/style.css
+++ b/style.css
@@ -721,12 +721,19 @@ a[href^="tel:"]::before,
 .comment-reply-login::before,
 .loop-nav a[rel="prev"]::before,
 .loop-nav a[rel="next"]::after,
-.menu-social li a::before,
-.widget li::before {
+.menu-social li a::before {
 	-moz-osx-font-smoothing: grayscale;
 	-webkit-font-smoothing: antialiased;
 	display: inline-block;
 	font: normal 16px/1 Genericons;
+	font-style: normal;
+	font-variant: normal;
+	font-weight: normal;
+	line-height: 1;
+	speak: none;
+	text-align: center;
+	text-decoration: inherit;
+	text-transform: none;
 	vertical-align: text-bottom;
 }
 
@@ -943,10 +950,61 @@ textarea {
 }
 
 /* Form fields, general styles */
-
 input:focus,
 textarea:focus {
 	outline: 0;
+}
+
+/* Search. */
+.search-form,
+.search-field {
+	height: 72px;
+	position: relative;
+	overflow: hidden;
+}
+.search-form .search-field {
+	padding-right: 76px;
+}
+.top-search-form .search-field,
+.top-search-form input[type="submit"].search-submit {
+	margin-bottom: 0;
+}
+input[type="submit"].search-submit,
+.search-icon {
+	height: 70px;
+	width: 70px;
+	margin: 0;
+	position: absolute;
+	right: 0;
+	top: 1px;
+	text-indent: -9999em;
+}
+.search-icon {
+	font-size: 24px;
+	padding-top: 21px;
+	text-indent: 0;
+}
+
+/* Reset round borders and shadows from iOS devices. */
+input[type="text"],
+input[type="button"],
+input[type="submit"],
+input[type="reset"],
+input[type="date"],
+input[type="datetime"],
+input[type="datetime-local"],
+input[type="email"],
+input[type="month"],
+input[type="password"],
+input[type="search"],
+input[type="tel"],
+input[type="text"],
+input[type="time"],
+input[type="url"],
+input[type="week"],
+textarea {
+	-webkit-appearance: none;
+	border-radius: 0;
 }
 
 
@@ -1027,9 +1085,9 @@ a.chuchadon-button {
 .main-navigation ul {
 	font-size: 16px;
 	font-size: 1rem;
+	list-style: none;
 	margin: 0;
 	padding: 0;
-	list-style: none;
 }
 .main-navigation li a {
 	text-decoration: none;
@@ -1854,7 +1912,7 @@ a.chuchadon-button {
 }
 
 /* Search widget */
-body .search-submit {
+input[type="submit"].search-submit {
 	margin-bottom: 30px;
 	margin-top: 0;
 }
@@ -1862,39 +1920,10 @@ body .search-submit {
 	position: relative;
 	margin-bottom: 30px;
 }
-.search-field {
-	display: block;
-	padding: 20px 140px 20px 20px;
-	width: 100%;
-	height: 80px;
-}
 body input[type="search"] {
 	-webkit-appearance: none;
 	-webkit-border-radius: 0;
 	border-radius: 0;
-}
-.search-submit {
-	display: block;
-	font-weight: bold;
-	height: 78px;
-	width: 120px;
-	text-align: center;
-	position: absolute;
-	top: 1px;
-	right: 1px;
-	margin: 0;
-}
-
-.widget ul > li::before {
-	content: '\f418';
-	font-size: 16px;
-	margin-bottom: 1px;
-	margin-right: 6px;
-	vertical-align: middle;
-}
-.widget.widget_categories ul > li::before {
-	content: '\f301';
-	margin-bottom: 4px;
 }
 
 
@@ -2924,11 +2953,6 @@ body.rtl {
 	padding: 20px 20px 20px 140px;
 }
 
-.rtl .widget ul > li::before {
-	margin-left: 6px;
-	margin-right: 0;
-}
-
 .rtl .breadcrumbs .trail-items li {
 	padding-left: 16px;
 	padding-right: 0;
@@ -3224,14 +3248,18 @@ a.chuchadon-button,
 	color: #fff;
 }
 
-body .search-submit {
+input[type="submit"].search-submit {
+	background-color: transparent;
 	color: #2a2a2a;
 }
-body .search-submit:hover,
-body .search-submit:focus,
-body .search-submit:active {
+input[type="submit"].search-submit:hover,
+input[type="submit"].search-submit:focus,
+input[type="submit"].search-submit:active {
+	background-color: transparent;
 	color: #fff;
-	border-color: #2a2a2a;
+}
+input[type="submit"].search-submit:focus {
+	border: 1px dotted #000;
 }
 
 /* == Menu colors and backgrounds == */
@@ -3400,7 +3428,6 @@ a.chuchadon-button:active {
 	color: #d4000f;
 }
 
-body .search-submit,
 tbody tr:nth-child(2n+1) > td,
 tbody tr:nth-child(2n+1) > th,
 .site-title-desc,
@@ -3420,7 +3447,6 @@ body .gform_confirmation_wrapper {
 
 .entry,
 .comments,
-.layout-1c .sidebar-primary,
 .sidebar-header,
 .pagination .page-numbers,
 .sidebar-front-page,
@@ -3431,14 +3457,6 @@ body .gform_confirmation_wrapper {
 
 .sidebar-subsidiary {
 	background-color: #000;
-}
-
-@media screen and (max-width: 999px) {
-	
-	.sidebar-primary {
-		background: #fff;	
-	}
-
 }
 
 .entry-terms.post_tag a {
