--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ Theme URI: https://foxland.fi/downloads/chuchadon/
 Author: Sami Keijonen
 Author URI: https://foxland.fi/
 Description: Chuchadon WordPress theme is made for sport clubs looking to use the SportsPress plugin. It’s also a perfect home for your fitness, health, or happiness blog.
-Version: 1.0.1
+Version: 1.0.2
 License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
 Text Domain: chuchadon
@@ -2569,10 +2569,9 @@ ol.comment-list dl dl {
 
 /* Avatars and images. */
 
-.site-logo {
+.custom-logo {
 	display: block;
 	margin: 0 auto 0.5em;
-	max-height: 100px;
 }
 
 .comment-list .avatar {
