--- a/style.css
+++ b/style.css
@@ -4,12 +4,12 @@ Theme URI: https://foxland.fi/downloads/chuchadon/
 Author: Sami Keijonen
 Author URI: https://foxland.fi/
 Description: Chuchadon WordPress theme is made for sport clubs looking to use the SportsPress plugin. It’s also a perfect home for your fitness, health, or happiness blog.
-Version: 1.0.5
+Version: 1.0.6
 License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
 Text Domain: chuchadon
 Domain Path: /languages/
-Tags: white, light, one-column, two-columns, left-sidebar, right-sidebar, fluid-layout, responsive-layout, accessibility-ready, custom-background, custom-header, custom-menu, editor-style, featured-images, flexible-header, full-width-template, microformats, post-formats, rtl-language-support, sticky-post, theme-options, translation-ready 
+Tags: one-column, two-columns, left-sidebar, right-sidebar, accessibility-ready, custom-background, custom-header, custom-menu, editor-style, featured-images, microformats, post-formats, rtl-language-support, sticky-post, theme-options, translation-ready, blog, entertainment, news
 
 This theme, like WordPress, is licensed under the GPL.
 Use it to make something cool, have fun, and share what you've learned with others.
@@ -2092,19 +2092,24 @@ span.entry-subtitle {
 .thumbnail {
 	margin: 0 0 1em 0;
 }
+.post-thumbnail {
+	display: block;
+	text-align: center;
+	transition: all .25s ease-in-out;
+}
 .post-thumbnail img {
 	display: block;
 	margin-left: auto;
 	margin-right: auto;
-	transition: all .25s ease-in-out;
 }
-a.post-thumbnail img:hover,
-a.post-thumbnail img:focus,
-a.post-thumbnail img:active {
+a.post-thumbnail:hover,
+a.post-thumbnail:focus,
+a.post-thumbnail:active {
 	transform: scale(1.05);
 }
-.post-thumbnail {
-	text-align: center;
+a.post-thumbnail:focus {
+	outline: thin dotted;
+	outline-offset: -1.25em;
 }
 
 .featured-area,
@@ -3102,7 +3107,7 @@ var {
  *
  * Body color:                              #444
  * Dark color for text and hover:           #2a2a2a
- * Lighter color for text:                  #555 and #777
+ * Lighter color for text:                  #555 and #666
  *
  * Link color:                              #d4000f
  * Lighter link color:                      #d4000f
@@ -3110,7 +3115,7 @@ var {
  * Color for text with above backgrounds:   #fff
  *
  * Backgroud colors:                        #fafafa
- * Borders:                                 #ddd and #777
+ * Borders:                                 #ddd and #666
  */
 
 body,
@@ -3178,7 +3183,7 @@ a:active {
 .comment-navigation .nav-previous:not(:empty) + .nav-next:not(:empty):before,
 .breadcrumb-trail .trail-end,
 .trail-items li::after {
-	color: #777;
+	color: #666;
 }
 
 h1,
@@ -3277,7 +3282,7 @@ input[type="submit"].search-submit:focus {
 }
 
 .main-navigation .menu-item-description {
-	color: #777;
+	color: #666;
 }
 
 .top-menu-buttons {
@@ -3300,7 +3305,7 @@ input[type="submit"].search-submit:focus {
 		border: none;
 		border-left: 1px solid #ddd;
 		border-right: 1px solid #ddd;
-		color: #777;
+		color: #666;
 	}
 	.dropdown-toggle:hover,
 	.dropdown-toggle:active,
@@ -3339,7 +3344,7 @@ input[type="submit"].search-submit:focus {
 	color: #2a2a2a;
 }
 .menu-social li a::before {
-	color: #777;
+	color: #666;
 }
 
 /* === 17.3 Backgrounds === */
@@ -3469,7 +3474,7 @@ body .gform_confirmation_wrapper {
 }
 
 body .mejs-controls .mejs-time-rail .mejs-time-current {
-	background: #777;
+	background: #666;
 }
 
 /* === 17.4 Borders === */
